[package]
name = "sdl2_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
specs = { version = "0.20.0", features = ["specs-derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf","image","gfx","mixer"]
